Dockerfile enable rar now working on php < 8.1

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,6 +1,7 @@
 ARG PHP_ALPINE_IMAGE=php:8.2-alpine
 FROM $PHP_ALPINE_IMAGE as zf1
-RUN apk add --no-cache --update bzip2-dev libzip-dev gmp-dev; \
+RUN  set -eux; \
+apk add --no-cache --update bzip2-dev libzip-dev gmp-dev; \
 apk add --no-cache --virtual build-essentials \
 icu-dev icu-libs zlib-dev g++ make automake autoconf libzip-dev \
 libpng-dev libwebp-dev libjpeg-turbo-dev freetype-dev && \
@@ -14,5 +15,7 @@ apk add --no-cache libmemcached-dev && pecl install memcached && docker-php-ext-
 apk add --no-cache libmemcached-dev zlib-dev && pecl install memcache && docker-php-ext-enable memcache;\
 \
 pecl install lzf && docker-php-ext-enable lzf;\
+\
+pecl install rar && docker-php-ext-enable rar;\
 \
 echo 'memory_limit = -1' >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini;
